syntax = "proto3";

package heimdall.types;

import "gogoproto/gogo.proto";

option go_package = "github.com/maticnetwork/heimdall/types";

option (gogoproto.sizer_all)       = true;
option (gogoproto.marshaler_all)   = true;
option (gogoproto.unmarshaler_all) = true;

message Checkpoint {
    option (gogoproto.goproto_getters)  = false;
    option (gogoproto.goproto_stringer) = false;

    string proposer    = 1;
    uint64 start_block = 2 [(gogoproto.moretags) = "yaml:\"start_block\""];
    uint64 end_block   = 3 [(gogoproto.moretags) = "yaml:\"end_block\""];
    string root_hash   = 4 [(gogoproto.moretags) = "yaml:\"root_hash\""];
    string BorChainID  = 5 [(gogoproto.moretags) = "yaml:\"bor_chain_ID\""];
    uint64 time_stamp  = 6 [(gogoproto.moretags) = "yaml:\"time_stamp\""];
}
